[aliases]
test=pytest

[flake8]
max-line-length = 100
ignore =
        F403,
        F405
exclude =
    /code/./.eggs/*
    */__pycache__/*

[metadata]
description-file = README.md

[tool:pytest]
python_files = tests/test*.py
addopts = --maxfail=0 --capture=no -p no:warnings
# For super verbose tests...
log_cli = 1
log_cli_level = DEBUG
# log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
# log_cli_date_format=%Y-%m-%d %H:%M:%S